--- a/webapp/.github/workflows/ci.yml
+++ b/webapp/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Node.js CI/CD
 
 on:
   push:
-    branches: [ "/webapp" ]
+    branches: [ "webapp" ]
   pull_request:
-    branches: [ "/webapp" ]
+    branches: [ "webapp" ]
 
 jobs:
   build-test:
@@ -19,7 +19,9 @@ jobs:
         node-version: "18"
 
     - name: Install dependencies
+      working-directory: ./DevOps_Project/webapp
       run: npm install
 
     - name: Run tests
+      working-directory: ./DevOps_Project/webapp
       run: npm test
