--- a/webapp/.github/workflows/ci.yml
+++ b/webapp/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Node.js CI/CD
 
 on:
   push:
-    branches: [ "webapp" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "webapp" ]
+    branches: [ "main" ]
 
 jobs:
   build-test:
